Hotel rooms finished

--- a/hotel/standard.html
+++ b/hotel/standard.html
@@ -56,10 +56,14 @@
             <div class="room-img">
                 <img src="../img/card-standard.jpeg" alt="Närbild på en bäddad hotellsäng med sänggavel i naturträ">
             </div>
-            <h2>Standard</h2>
-            <p>Våra stilrena standardrum erbjuder en avslappnad atmosfär och allt du behöver för en rofylld vistelse. Perfekt för dig som vill njuta av stillheten med komfort i fokus.</p>
 
             <div class="room-info">
+                <h2>Standard</h2>
+                <p>Våra stilrena standardrum erbjuder en avslappnad atmosfär och allt du behöver för en rofylld vistelse. Perfekt för dig som vill njuta av stillheten med komfort i fokus.</p>
+
+                            <div class="room-info-list">
+                                <h3>Rumsinfo</h3>
+                            
                 <ul>
                     <li><strong>Rumsstorlek:</strong> 20 m&sup2;</li>
                     <li><strong>Incheckning:</strong> 15:00</li>
@@ -68,23 +72,38 @@
                     <li><strong>Max antal personer:</strong> 2</li>
                 </ul>
             </div>
-            <div class="facilities">
-                <ul>
-                    <li>Smart-TV</li>
-                    <li>Kaffe/Te bryggare</li>
-                    <li>Dusch</li>
-                    <li>Förvaringsbox</li>
-                    <li>Garderob</li>
-                    <li>Skrivbord</li>
-                    <li>Hårfön</li>
-                    <li>Badrock</li>
-                    <li>Tofflor</li>
-                    <li>Minibar</li>
-                    <li>Gratis WiFi</li>
-                                        <li>Alla gäster har tillgång till spa, gym och relaxavdelnig under sin vistelse.</li>
-                </ul>
+
+                <div class="facilities">
+                    <h3>Faciliteter</h3>
+                    <ul class="fac">
+                        <li><i class="fa-solid fa-spa"></i> Badrock & tofflor</li>
+                        <li><i class="fa-solid fa-shower"></i> Dusch</li>
+                        <li><i class="fa-solid fa-lock"></i> Förvaringsbox</li>
+                        <li><i class="fa-solid fa-wifi"></i> Gratis WiFi</li>
+                        <li><i class="fa-solid fa-wind"></i> Hårfön</li>
+                        <li><i class="fa-solid fa-mug-hot"></i> Kaffe/Te bryggare</li>
+                        <li><i class="fa-solid fa-martini-glass"></i> Minibar</li>
+                        <li><i class="fa-solid fa-tv"></i> Smart-TV</li>
+                    </ul>
+                </div>
             </div>
         </section>
+
+                <section class="room-detail">
+                    <div class="room-info">
+                        <h2>Bra att veta</h2>
+                        <ul class="fac">
+                            <li>Fri parkering</li>
+                            <li>12 st laddstolpar</li>
+                            <li>Parkering i garage – 150 SEK / dygn</li>
+                            <li>Tvättservice finns (avgift tillkommer)</li>
+                            <li>Frukostbuffé: 06:00–10:00</li>
+                            <li>Roomservice: 07:00–22:00</li>
+                            <li>Husdjursfri policy / allergivänliga rum</li>
+                            <li>Tillgänglighet: Hiss och handikapprum finns</li>
+                        </ul>
+                    </div>
+                </section>
     </main>
 
     <!-- ==================== FOOTER ==================== -->
