--- a/hotel/suite.html
+++ b/hotel/suite.html
@@ -53,14 +53,17 @@
     <!-- ==================== MAIN CONTENT ==================== -->
     <main>
         <section class="room-detail">
-                                    <div class="room-img">
-                    <img src="../img/card-suite.jpeg" alt="Ett hotellrum utifrån sett med nordiska träd i förgrunden. I bakgrunden, innanför glasväggar syns ett badkar och en säng.">
+            <div class="room-img">
+                <img src="../img/card-suite.jpeg" alt="Ett hotellrum utifrån sett med nordiska träd i förgrunden. I bakgrunden, innanför glasväggar syns ett badkar och en säng.">
             </div>
-            <h2>Suite</h2>
-            <p>Vår mest exklusiva upplevelse – generösa ytor, jacuzzi på rummet och privat bastu med panoramavy över vattnet. En upplevelse utöver det vanliga, för dig som söker fullständig avkoppling och avskildhet.</p>
 
             <div class="room-info">
-                <ul>
+            <h2>Suite</h2>
+            <p>Vår mest exklusiva upplevelse – generösa ytor, jacuzzi på rummet och privat bastu med panoramavy över vattnet. En upplevelse utöver det vanliga, för dig som söker fullständig avkoppling och avskildhet.</p>
+            
+            <div class="room-info-list">
+                        <h3>Rumsinfo</h3>
+            <ul>
                     <li><strong>Rumsstorlek:</strong> 70 m&sup2;</li>
                     <li><strong>Incheckning:</strong> 15:00</li>
                     <li><strong>Utcheckning:</strong> 11:00</li>
@@ -69,27 +72,42 @@
                     <li><strong>Extra säng/mindre sängar:</strong> 2</li>
                 </ul>
             </div>
-            <div class="facilities">
-                <ul>
-                    <li>Jacuzzi på rummet</li>
-                    <li>Privat bastu</li>
-                    <li>Sjöutsikt</li>
-                    <li>2 st smart-TV</li>
-                    <li>Nespressomaskin</li>
-                    <li>Egen uteplats</li>
-                    <li>Badkar</li>
-                    <li>Dusch</li>
-                    <li>Förvaringsbox</li>
-                    <li>Soffa</li>
-                    <li>Garderob</li>
-                    <li>Skrivbord</li>
-                    <li>Strykjärn & Strykbräda</li>
-                    <li>Hårfön</li>
-                    <li>Badrock</li>
-                    <li>Tofflor</li>
-                    <li>Minibar</li>
-                    <li>Gratis WiFi</li>
-                    <li>Alla gäster har tillgång till spa, gym och relaxavdelnig under sin vistelse.</li>
+
+                <div class="facilities">
+                                <h3>Faciliteter</h3>
+                <ul class="fac">
+                    <li><i class="fa-solid fa-spa"></i> Badrock & tofflor</li>
+                    <li><i class="fa-solid fa-wifi"></i> Gratis WiFi</li>
+                    <li><i class="fa-solid fa-wind"></i> Hårfön</li>
+                    <li><i class="fa-solid fa-martini-glass"></i> Minibar</li>
+                    <li><i class="fa-solid fa-mug-hot"></i> Nespressomaskin</li>
+                    <li><i class="fa-solid fa-tv"></i> 2 st smart-TV</li>
+
+                    <li><i class="fa-solid fa-hot-tub-person"></i> Jacuzzi på rummet</li>
+                    <li><i class="fa-solid fa-fire-flame-curved"></i> Privat bastu</li>
+                    <li><i class="fa-solid fa-water"></i> Sjöutsikt</li>
+                    <li><i class="fa-solid fa-chair"></i> Egen uteplats</li>
+                    <li><i class="fa-solid fa-bath"></i> Badkar</li>
+                    <li><i class="fa-solid fa-shower"></i> Dusch</li>
+                    <li><i class="fa-solid fa-lock"></i> Förvaringsbox</li>
+                    <li><i class="fa-solid fa-couch"></i> Soffa</li>
+                </ul>
+            </div>
+            </div>
+        </section>
+
+        <section class="room-detail">
+            <div class="room-info">
+                <h2>Bra att veta</h2>
+                <ul class="fac">
+                    <li>Fri parkering</li>
+                    <li>12 st laddstolpar</li>
+                    <li>Parkering i garage – 150 SEK / dygn</li>
+                    <li>Tvättservice finns (avgift tillkommer)</li>
+                    <li>Frukostbuffé: 06:00–10:00</li>
+                    <li>Roomservice: 07:00–22:00</li>
+                    <li>Husdjursfri policy / allergivänliga rum</li>
+                    <li>Tillgänglighet: Hiss och handikapprum finns</li>
                 </ul>
             </div>
         </section>
