--- a/hotel/deluxe.html
+++ b/hotel/deluxe.html
@@ -52,14 +52,18 @@
 
     <!-- ==================== MAIN CONTENT ==================== -->
     <main>
-        <section clas="room-detail">
+        <section class="room-detail">
                         <div class="room-img">
                     <img src="../img/card-deluxe.jpeg" alt="En bäddad hotellsäng, ett badkar och stora glaspartier med skog utanför i bakgrunden">
             </div>
+
+            <div class="room-info">
             <h2>Deluxe</h2>
                     <p>Ett rymligt rum med badkar, skogsutsikt och en inredning inspirerad av skandinavisk enkelhet och elegans. Passar dig som vill kombinera naturens lugn med extra lyx och utrymme.</p>
 
-            <div classs="room-info">
+                                <div class="room-info-list">
+                                    <h3>Rumsinfo</h3>
+                               
                 <ul>
                     <li><strong>Rumsstorlek:</strong> 30 m&sup2;</li>
                     <li><strong>Incheckning:</strong> 15:00</li>
@@ -68,26 +72,41 @@
                     <li><strong>Max antal personer:</strong> 3</li>
                     <li><strong>Extra säng/mindre sängar:</strong> 1</li>
                 </ul>
-            </div>
+ </div>
+
             <div class="facilities">
-                <ul>
-                    <li>Badkar på rummet</li>
-                    <li>Skogsutsikt</li>
-                    <li>Smart-TV</li>
-                    <li>Kaffe/Te bryggare</li>
-                    <li>Dusch</li>
-                    <li>Förvaringsbox</li>
-                    <li>Garderob</li>
-                    <li>Skrivbord</li>
-                    <li>Hårfön</li>
-                    <li>Badrock</li>
-                    <li>Tofflor</li>
-                    <li>Minibar</li>
-                    <li>Gratis WiFi</li>
-                                        <li>Alla gäster har tillgång till spa, gym och relaxavdelnig under sin vistelse.</li>
+                <h3>Faciliteter</h3>
+                <ul class="fac">
+                        <li><i class="fa-solid fa-spa"></i> Badrock & tofflor</li>
+                        <li><i class="fa-solid fa-shower"></i> Dusch</li>
+                        <li><i class="fa-solid fa-lock"></i> Förvaringsbox</li>
+                        <li><i class="fa-solid fa-wifi"></i> Gratis WiFi</li>
+                        <li><i class="fa-solid fa-wind"></i> Hårfön</li>
+                        <li><i class="fa-solid fa-mug-hot"></i> Kaffe/Te bryggare</li>
+                        <li><i class="fa-solid fa-martini-glass"></i> Minibar</li>
+                        <li><i class="fa-solid fa-tv"></i> Smart-TV</li>
+                    <li><i class="fa-solid fa-bath"></i> Badkar på rummet</li>
+                    <li><i class="fa-solid fa-tree"></i>Skogsutsikt</li>
                 </ul>
             </div>
+            </div>
         </section>
+
+                <section class="room-detail">
+                    <div class="room-info">
+                        <h2>Bra att veta</h2>
+                        <ul class="fac">
+                            <li>Fri parkering</li>
+                            <li>12 st laddstolpar</li>
+                            <li>Parkering i garage – 150 SEK / dygn</li>
+                            <li>Tvättservice finns (avgift tillkommer)</li>
+                            <li>Frukostbuffé: 06:00–10:00</li>
+                            <li>Roomservice: 07:00–22:00</li>
+                            <li>Husdjursfri policy / allergivänliga rum</li>
+                            <li>Tillgänglighet: Hiss och handikapprum finns</li>
+                        </ul>
+                    </div>
+                </section>
     </main>
 
     <!-- ==================== FOOTER ==================== -->
