Small adjusments in hotel

--- a/contact.html
+++ b/contact.html
@@ -111,7 +111,7 @@
                 </details>
 
                 <details>
-                    <summary>Behöver jag ta med mig något till min behandling?</summary>
+                    <summary>Behöver jag ta med mig något till spaet eller min behandling?</summary>
                     <p>Nej, vi står för handdukar, badrock och tofflor. Det enda du behöver ta med är ett öppet sinne och en stund för dig själv.</p>
                 </details>
 
