--- a/contact.html
+++ b/contact.html
@@ -149,7 +149,7 @@
 
                 <details>
                     <summary>Finns det parkering?</summary>
-                    <p>Ja, vi har gratis parkering precis utanför.</p>
+                    <p>Ja, vi har gratis parkering precis utanför. Det finns även 12 st laddstolpar för elbilar.</p>
                 </details>
 
 
