--- a/rapport/rapport.html
+++ b/rapport/rapport.html
@@ -270,6 +270,31 @@
                 <!-- Endast för VG. Har du inte utfört användartest, tar du bort detta avsnitt (hela section-elementet). -->
                 <!-- Beskriv hur du genomförde användartestet. Ange vilka brister du upptäckte och hur du åtgärdat dem. -->
                  <h3>Erica</h3>
+                 <p><strong>Jag genomförde användartestet på min syster som fick navigera runt på webbplatsen och ge återkoppling utifrån sin upplevelse som besökare. Hon påpekade flera förbättringsmöjligheter, bland annat:</strong></p>
+                    <ul class="req">
+<li>Att vissa artiklar hade hover-effekt trots att de redan innehöll all information, vilket skapade förvirring.</li>
+<li>Att inputfälten i formulären upplevdes som något låga och trånga.</li>
+<li>Att informationen i “sidenote” under spapaketen var otydlig och behövde framträda tydligare.</li>
+<li>Att rubriken “Spa med övernattning” kunde bytas till “Dagsspa” för att få mer flyt och minska upprepning.</li>
+<li>Att FAQ-delen skulle kunna kategoriseras för att användaren ska få bättre överblick.</li>
+<li>Att information om laddstolpar för elbil saknades.</li>
+<li>Att det borde finnas tillval i bokningsformuläret, t.ex. fruktbricka eller vin.</li>
+<li>Att hon saknade mer information om hotellrummen än det som syns på sidan “Hotel”.</li>
+</ul>
+<br>
+<p><strong>Efter testet genomförde jag följande justeringar.</strong></p>
+<ul class="check">
+<li>Gjorde alla klickbara artiklar klickbara över hela ytan, inte bara via länken.</li>
+<li>Tog bort hover-effekten från de artiklar som redan visar all information (för att undvika missvisande interaktivitet).</li>
+<li>Förstorande inputfälten i formulären för att göra dem mer lättanvända.</li>
+<li>Gjorde “sidenote”-informationen mer framträdande visuellt.</li>
+<li>Bytte namn på “Spa utan övernattning” till “Dagsspa”.</li>
+<li>Lade till information om laddstolpar för elbil på både “Kontakt & FAQ” och i hotellinformationen.</li>
+<li>Skapade separata sidor för de olika rummen med mer information om rummen och faciliteterna.</li></ul>
+<p>Jag planerar dessutom att, om tid finns, kategorisera frågorna i FAQ-sektionen för att ytterligare förbättra användarvänligheten.</p>
+
+
+</p>
                  <ul class="req">
                     <li>Gör artiklar med hover klickbara</li>
                     <li>Ta bort hover på artiklar med all info</li>
