--- a/restaurant.html
+++ b/restaurant.html
@@ -53,7 +53,7 @@
     <!-- ==================== MAIN CONTENT ==================== -->
     <main>
 
- <section class="hero hero-restaurant">
+        <section class="hero hero-restaurant">
             <picture>
                 <!-- MOBILE VERSION -->
                 <source media="(max-width: 600px)" srcset="img/card-restaurant.jpeg">
@@ -63,9 +63,9 @@
                 <img src="img/hero-restaurant-desktop.jpeg" alt="En restaurang inredd med naturnära färger och material.">
             </picture>
             <div class="hero-text">
-            <h1>Nordic Calm Restaurant</h1>
-            <p>Mat som balanserar kropp och sinne. Vårt kök inspireras av nordiska råvaror och rena smaker – tillagat med omtanke och säsongens bästa ingredienser.</p>
-            <a href="#book-restaurant" class="btn">Boka bord</a>
+                <h1>Nordic Calm Restaurant</h1>
+                <p>Mat som balanserar kropp och sinne. Vårt kök inspireras av nordiska råvaror och rena smaker – tillagat med omtanke och säsongens bästa ingredienser.</p>
+                <a href="#book-restaurant" class="btn">Boka bord</a>
             </div>
         </section>
 
@@ -99,7 +99,8 @@
             <div class="booking">
                 <h2>Nordic Calm Restaurang
                     <br>
-                    Boka bord</h2>
+                    Boka bord
+                </h2>
                 <p class="form-note">Vi bekräftar din bokning via e-post inom 24 timmar.</p>
                 <form name="table" method="POST" data-netlify="true" data-netlify-honeypot="bot-field">
                     <input type="hidden" name="form-name" value="booking">
@@ -188,7 +189,7 @@
     </main>
 
     <!-- ==================== FOOTER ==================== -->
-         <footer>
+    <footer>
         <div class="footer-content">
             <div class="footer-navigation">
                 <h3>Snabblänkar</h3>
@@ -208,15 +209,15 @@
                 <p>E-post: info@nordiccalmspa.se</p>
                 <p>Adress: Tallgläntan 3, 791 92 Falun</p>
                 <div class="socials">
-                <a href="https://www.facebook.com" target="_blank">
-                <i class="fa-brands fa-facebook-f" aria-hidden="true"></i></a>
-                <a href="https://www.instagram.com" target="_blank">
-                <i class="fa-brands fa-instagram" aria-hidden="true"></i>
-                </a>
-                <a href="https://www.linkedin.com" target="_blank">
-                <i class="fa-brands fa-linkedin-in" aria-hidden="true"></i>
-                </a>
-            </div>
+                    <a href="https://www.facebook.com" target="_blank">
+                        <i class="fa-brands fa-facebook-f" aria-hidden="true"></i></a>
+                    <a href="https://www.instagram.com" target="_blank">
+                        <i class="fa-brands fa-instagram" aria-hidden="true"></i>
+                    </a>
+                    <a href="https://www.linkedin.com" target="_blank">
+                        <i class="fa-brands fa-linkedin-in" aria-hidden="true"></i>
+                    </a>
+                </div>
                 <p><strong>Öppettider</strong></p>
                 <p>Hotell/reception: 06:00–00:00</p>
                 <p>Spa & Relax: 07:00–22:00</p>
@@ -234,12 +235,12 @@
             </div>
         </div>
         <div class="footer-end">
-        © 2025 Nordic Calm Spa
-    </div>
+            © 2025 Nordic Calm Spa
+        </div>
         <div class="transition">
             <a href="rapport/rapport.html" target="_blank">Projektrapport</a>
-      
-    </div>
+
+        </div>
     </footer>
 </body>
 
