--- a/book.html
+++ b/book.html
@@ -134,7 +134,7 @@
                         <div class="form-section package">
                             <label for="package" id="package-heading">Välj paket:</label>
 
-                            <select name="package">
+                            <select name="package" id="package">
                                 <option value="" selected>Välj ett alternativ</option>
                                 <optgroup label="Aktuella erbjudanden">
                                     <option>Sunday Reset – 2 för 1</option>
