--- a/hotel/standard.html
+++ b/hotel/standard.html
@@ -92,7 +92,7 @@
                 <section class="room-detail">
                     <div class="room-info">
                         <h2>Bra att veta</h2>
-                        <ul class="fac">
+                        <ul class="hotel-fac">
                             <li>Fri parkering</li>
                             <li>12 st laddstolpar</li>
                             <li>Parkering i garage – 150 SEK / dygn</li>
