--- a/spa/spa.html
+++ b/spa/spa.html
@@ -75,6 +75,30 @@
             </div>
         </section>
 
+        <section class="intro">
+            <div class="spa-intro">
+            <div class="spa-wrapper">
+                <h2>Avkoppling för kropp och sinne</h2>
+                <h3>9 pooler • 6 bastur • Relaxavdelning</h3>
+                <p>Välkommen till vår spaavdelning - en plats skapad för total återhämtning. Låt stillheten omfamna dig, känn de varma tonerna och doften av eteriska oljor som fyller rummen. Här möts nordisk enkelhet och modern spalyx i en harmonisk upplevelse för både kropp och själ.</p>
+                <br>
+                <p>Vandra mellan bastur med mjuk värme, svala källor som väcker sinnena och lugna relaxytor där du kan vila i tystnad. Utomhus väntar frisk luft, porlande vatten och vyer som stillar tankarna. Oavsett om du söker ro, energi eller bara en stunds närvaro, hittar du här en plats där du får återknyta till dig själv.</p>
+            </div>
+
+            <div class="ritual-wrapper">
+                <h2>Den lugnande inledningen</h2>
+                <p>Din spaupplevelse inleds i ett stilla rum där fokus ligger på närvaro och återhämtning. Här får du en stund att landa, andas djupt och låta tankarna tystna. Denna stund är en mjuk övergång in i spavistelsen.</p>
+                <br>
+                <h3>Ritual</h3>
+                <p>Sätt dig bekvämt, känn tyngden i kroppen och låt andetagen bli långsamma och djupa. Tystnaden och de subtila dofterna omsluter dig medan sinnena stillas. När du lämnar rummet har du skapat utrymme för ro, närvaro och total avkoppling.</p>
+            </div>
+        </div>
+        </section>
+
+
+
+
+
         <section class="highlights">
             <h2>Behandlingar & upplevelser</h2>
             <div class="cards">
@@ -100,12 +124,6 @@
                     </article>
                 </a>
             </div>
-        </section>
-
-        <section class="intro">
-            <h2>Avkoppling för kropp och sinne</h2>
-            <h3>9 pooler . 6 bastur . Relaxavdelning</h3>
-            <p>Välkommen till vår spaavdelning - en plats skapad för total återhämtning. Njut av stillheten, de varma tonerna och doften av eteriska oljor som fyller rummen. Här kombineras traditionell nordisk enkelhet med modern spalyx för att ge dig en helhetsupplevelse av lugn och harmoni.</p>
         </section>
 
         <section class="cta">
