Restaurant opening hours added in footer

--- a/contact.html
+++ b/contact.html
@@ -194,6 +194,7 @@
                 </div>
                 <p><strong>Öppettider</strong></p>
                 <p>Hotell/reception: 06:00–00:00</p>
+                <p>Restaurang & Bar: 06:00–00:00</p>
                 <p>Spa & Relax: 07:00–22:00</p>
             </div>
             <div class="news-letter">
