--- a/offers.html
+++ b/offers.html
@@ -119,42 +119,42 @@
             <h2>Aktuella erbjudanden</h2>
             <div class="cards offers">
                 <article>
-                                       <a href="#sunday-reset">
-                    <div class="img-wrapper">
-                        <img src="img/card-sunday-reset.jpeg" alt="En kvinna som ligger på magen i en säng med fluffiga, vita sängklder.">
-                        <img src="img/2-for-1.png" alt="En ring med texten '2 för 1' inuti." class="stamp-left">
-                        <div class="text-overlay">
-                            <h3>Sunday Reset – 2 för 1</h3>
-                            <p>Låt söndagen bli din dag för återhämtning.</p>
+                    <a href="#sunday-reset">
+                        <div class="img-wrapper">
+                            <img src="img/card-sunday-reset.jpeg" alt="En kvinna som ligger på magen i en säng med fluffiga, vita sängklder.">
+                            <img src="img/2-for-1.png" alt="En ring med texten '2 för 1' inuti." class="stamp-left">
+                            <div class="text-overlay">
+                                <h3>Sunday Reset – 2 för 1</h3>
+                                <p>Låt söndagen bli din dag för återhämtning.</p>
+                            </div>
                         </div>
-                    </div>
                     </a>
                 </article>
 
                 <article>
                     <a href="#mindful-detox">
-                    <div class="img-wrapper">
-                        <img src="img/card-mindful-detox.jpeg" alt="Ett glas med grön smoothie omgivet av kiwi och bladspenat.">
-                        <img src="img/just-nu.png" alt="En ring med 'just nu' inuti." class="stamp-right">
-                        <div class="text-overlay">
-                            <h3>Mindful Detox</h3>
-                            <p>Förnya hud och själ med vårt detoxpaket som ger både energi och glow.</p>
+                        <div class="img-wrapper">
+                            <img src="img/card-mindful-detox.jpeg" alt="Ett glas med grön smoothie omgivet av kiwi och bladspenat.">
+                            <img src="img/just-nu.png" alt="En ring med 'just nu' inuti." class="stamp-right">
+                            <div class="text-overlay">
+                                <h3>Mindful Detox</h3>
+                                <p>Förnya hud och själ med vårt detoxpaket som ger både energi och glow.</p>
+                            </div>
                         </div>
-                    </div>
-                </a>
+                    </a>
                 </article>
 
                 <article>
                     <a href="#spa-sip">
-                    <div class="img-wrapper">
-                        <img src="img/card-spa-sip.jpeg" alt="Ett glas med bubbel som hälls upp.">
-                        <img src="img/just-nu.png" alt="En ring med texten 'just nu ' inuti." class="stamp-right">
-                        <div class="text-overlay">
-                            <h3>Spa & Sip</h3>
-                            <p>Unna dig en eftermiddag med bubbel och spa. Perfekt för kompisgäng eller par som vill fira något litet, eller bara skämma bort sig själva.</p>
+                        <div class="img-wrapper">
+                            <img src="img/card-spa-sip.jpeg" alt="Ett glas med bubbel som hälls upp.">
+                            <img src="img/just-nu.png" alt="En ring med texten 'just nu ' inuti." class="stamp-right">
+                            <div class="text-overlay">
+                                <h3>Spa & Sip</h3>
+                                <p>Unna dig en eftermiddag med bubbel och spa. Perfekt för kompisgäng eller par som vill fira något litet, eller bara skämma bort sig själva.</p>
+                            </div>
                         </div>
-                    </div>
-                </a>
+                    </a>
                 </article>
             </div>
         </section>
@@ -222,11 +222,11 @@
 
                 <article id="mindful-detox">
                     <div class="img-wrapper-day">
-                    <img src="img/card-mindful-detox.jpeg" alt="Ett glas med grön smoothie omgivet av kiwi och bladspenat.">
-                                        <img src="img/just-nu.png" alt="En ring med texten 'just nu ' inuti." class="stamp-right">
-                    <h3>Mindful Detox</h3>
-                    <p>Förnya hud och själ med vårt detoxpaket som ger både energi och glow.</p>
-                </div>
+                        <img src="img/card-mindful-detox.jpeg" alt="Ett glas med grön smoothie omgivet av kiwi och bladspenat.">
+                        <img src="img/just-nu.png" alt="En ring med texten 'just nu ' inuti." class="stamp-right">
+                        <h3>Mindful Detox</h3>
+                        <p>Förnya hud och själ med vårt detoxpaket som ger både energi och glow.</p>
+                    </div>
                     <ul class="including">
                         <li>30 min kroppsskrubb</li>
                         <li>45 min massage med eteriska oljor</li>
@@ -242,34 +242,34 @@
 
                 <article id="spa-sip">
                     <div class="img-wrapper-day">
-                    <img src="img/card-spa-sip.jpeg" alt="Ett glas med bubbel som hälls upp.">
-                    <img src="img/just-nu.png" alt="En ring med texten 'just nu ' inuti." class="stamp-right">
-                    <h3>Spa & Sip</h3>
-                    <p>Unna dig en eftermiddag med bubbel och spa. Perfekt för kompisgäng eller par som vill fira något litet, eller bara skämma bort sig själva.</p>
-            </div>
-            <ul class="including">
-                <li>En flaska mousserande / 2 personer</li>
-                <li>Fruktbricka</li>
-                <li>Tillgång till spa kl. 16:00–20:00</li>
-            </ul>
-            <div class="price-booking">
-                <p>Från 795 SEK / person</p>
-                <a href="book.html">Boka här</a>
-            </div>
-            </article>
+                        <img src="img/card-spa-sip.jpeg" alt="Ett glas med bubbel som hälls upp.">
+                        <img src="img/just-nu.png" alt="En ring med texten 'just nu ' inuti." class="stamp-right">
+                        <h3>Spa & Sip</h3>
+                        <p>Unna dig en eftermiddag med bubbel och spa. Perfekt för kompisgäng eller par som vill fira något litet, eller bara skämma bort sig själva.</p>
+                    </div>
+                    <ul class="including">
+                        <li>En flaska mousserande / 2 personer</li>
+                        <li>Fruktbricka</li>
+                        <li>Tillgång till spa kl. 16:00–20:00</li>
+                    </ul>
+                    <div class="price-booking">
+                        <p>Från 795 SEK / person</p>
+                        <a href="book.html">Boka här</a>
+                    </div>
+                </article>
 
-            <article id="spa-entrance">
-                <img src="img/card-spa-entrance.jpeg" alt="En modern bastu i trä, med ett stenfyllt aggregat i centrum.">
-                <h3>Spaentré</h3>
-                <p>För dig som endast vill njuta av spa- och relaxavdelningen – koppla av i varma bad, bastu och relaxytor, och låt stillheten omsluta dig för en stund.</p>
-                <ul class="including">
-                    <li>Tillgång till 4 timmars spa</li>
-                </ul>
-                <div class="price-booking">
-                    <p>Från 595 SEK / person</p>
-                    <a href="book.html">Boka här</a>
-                </div>
-            </article>
+                <article id="spa-entrance">
+                    <img src="img/card-spa-entrance.jpeg" alt="En modern bastu i trä, med ett stenfyllt aggregat i centrum.">
+                    <h3>Spaentré</h3>
+                    <p>För dig som endast vill njuta av spa- och relaxavdelningen – koppla av i varma bad, bastu och relaxytor, och låt stillheten omsluta dig för en stund.</p>
+                    <ul class="including">
+                        <li>Tillgång till 4 timmars spa</li>
+                    </ul>
+                    <div class="price-booking">
+                        <p>Från 595 SEK / person</p>
+                        <a href="book.html">Boka här</a>
+                    </div>
+                </article>
 
 
             </div>
@@ -437,6 +437,7 @@
                 </div>
                 <p><strong>Öppettider</strong></p>
                 <p>Hotell/reception: 06:00–00:00</p>
+                <p>Restaurang & Bar: 06:00–00:00</p>
                 <p>Spa & Relax: 07:00–22:00</p>
             </div>
             <div class="news-letter">
