--- a/restaurant.html
+++ b/restaurant.html
@@ -75,6 +75,7 @@
         </section>
 
         <section class="highlights restaurant">
+            <h2>Balans i alla måltider</h2>
             <div class="cards food">
                 <article class="dish">
                     <img src="img/card-breakfast.jpeg" alt="En del av en frukostbuffé med bröd, mjölk och pålägg.">
@@ -219,6 +220,7 @@
                 </div>
                 <p><strong>Öppettider</strong></p>
                 <p>Hotell/reception: 06:00–00:00</p>
+                <p>Restaurang & Bar: 06:00–00:00</p>
                 <p>Spa & Relax: 07:00–22:00</p>
             </div>
             <div class="news-letter">
