--- a/spa/spa.html
+++ b/spa/spa.html
@@ -87,7 +87,7 @@
 
             <div class="ritual-wrapper">
                 <h2>Den lugnande inledningen</h2>
-                <p>Din spaupplevelse inleds i ett stilla rum där fokus ligger på närvaro och återhämtning. Här får du en stund att landa, andas djupt och låta tankarna tystna. Denna stund är en mjuk övergång in i spavistelsen.</p>
+                <p>Din spaupplevelse inleds i ett stilla rum där fokus ligger på närvaro, återhämtning och ditt välbefinnande. Här får du en stund att landa, andas djupt och låta tankarna tystna. Denna stund är en mjuk övergång in i spavistelsen.</p>
                 <br>
                 <h3>Ritual</h3>
                 <p>Sätt dig bekvämt, känn tyngden i kroppen och låt andetagen bli långsamma och djupa. Tystnaden och de subtila dofterna omsluter dig medan sinnena stillas. När du lämnar rummet har du skapat utrymme för ro, närvaro och total avkoppling.</p>
@@ -166,6 +166,7 @@
                 </div>
                 <p><strong>Öppettider</strong></p>
                 <p>Hotell/reception: 06:00–00:00</p>
+                <p>Restaurang & Bar: 06:00–00:00</p>
                 <p>Spa & Relax: 07:00–22:00</p>
             </div>
             <div class="news-letter">
